--- a/src/app/pages/discount/list/discount.component.html
+++ b/src/app/pages/discount/list/discount.component.html
@@ -14,11 +14,19 @@
           <div class="card-header border-0">
             <h3 class="mb-0 mb-4">Category tables</h3>
             <div class="d-flex justify-content-between">
-              <div class="text-left">
-                <input type="text" placeholder="Tìm kiếm..." class="form-control" [style]="'with 30%'">
+              <!-- <div class="text-left" [formGroup]="dataForm">
+                <input type="text" placeholder="Tìm kiếm..." class="form-control" [style]="'with 30%'" formControlName="search">
+                <button class="btn btn-success" (click)="search()">Search</button>
               </div>
               <div class="text-right">
-                <a [routerLink]="'/system-admin/category/new'" class="btn btn-sm btn-primary">Thêm mới</a>
+                <a [routerLink]="'/system-admin/discount/new'" class="btn btn-sm btn-primary">Thêm mới</a>
+              </div> -->
+              <div style="display: flex; align-items: center; gap: 10px;" [formGroup]="dataForm">
+                <input type="text" placeholder="Search Code" class="form-control" style="flex: 1;" formControlName="searchCode">
+                <a class="btn btn-info" (click)="search()">Search</a>
+              </div>
+              <div class="text-right">
+                <a [routerLink]="'/system-admin/discount/new'" class="btn btn-sm btn-primary">Thêm mới</a>
               </div>
             </div>
           </div>
@@ -27,31 +35,31 @@
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
-                  <th scope="col">STT</th>
-                  <th scope="col">Tên</th>
-                  <th scope="col">Trạng thái</th>
-                  <th scope="col">Parent Id</th>
-                  <th scope="col"></th>
+                  <th scope="col" style="display: none;" >Id</th>
+                  <th scope="col">Code</th>
+                  <th scope="col">Percentage</th>
+                  <th scope="col">Start Day</th>
+                  <th scope="col">End Day</th>
+                  <th scope="col">Actions</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">
-                    <div class="media align-items-center">
+                <tr *ngFor="let item of this.dataDiscounts">
+                  <td style="display: none;">
+                    <div class="media align-items-center"> 
                       <div class="media-body">
-                        <span class="mb-0 text-sm">Argon Design System</span>
+                        <span class="mb-0 text-sm">{{ item.id}}</span>
                       </div>
                     </div>
-                  </th>
-                  <td>
-                    Argon Design System
                   </td>
+                  <td>{{ item.code }}</td>
+                  <td>{{ item.percentage }}</td>
+                  <td>{{ item.startDate }}</td>
+                  <td>{{ item.startEnd }}</td>
                   <td>
                     <span class="badge badge-dot mr-4">
-                      <i class="bg-warning"></i> pending
+                      <i class="bg-warning"></i>{{ item.isActive }}
                     </span>
-                  </td>
-                  <td>
                   </td>
                   <td class="text-right">
                     <div ngbDropdown placement="bottom-right">
@@ -59,42 +67,35 @@
                         <i class="fas fa-ellipsis-v"></i>
                       </a>
                       <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                        <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'"
-                          href="javascript:void(0)">Xem</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Cập nhật</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
+                        <a class="dropdown-item" [routerLink]="['/system-admin/discount', item.id, 'edit']">Xem</a>
+                        <a class="dropdown-item" [routerLink]="['/system-admin/discount', item.id, 'edit']">Cập nhật</a>
+                        <a class="dropdown-item">Xóa</a>
                       </div>
                     </div>
                   </td>
                 </tr>
+               
               </tbody>
             </table>
           </div>
-          <div class="card-footer py-4">
-            <nav aria-label="...">
-              <ul class="pagination justify-content-end mb-0">
-                <li class="page-item disabled">
-                  <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                    <i class="fas fa-angle-left"></i>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-                <li class="page-item active">
-                  <a class="page-link" href="javascript:void(0)">1</a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">
-                    <i class="fas fa-angle-right"></i>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+         <div class="card-footer py-4">
+           <nav aria-label="...">
+             <ul class="pagination justify-content-end mb-0">
+              <li class="page-item">
+                <a class="page-link" (click)="previousPage()" *ngIf="page > 0">
+                  <i class="fas fa-angle-left"></i>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+               <li class="page-item">
+                 <a class="page-link" (click)="nextPage()">
+                   <i class="fas fa-angle-right"></i>
+                   <span class="sr-only">Next</span>
+                 </a>
+               </li>
+             </ul>
+           </nav>
+         </div>
         </div>
       </div>
     </div>
